@@ -58,6 +58,60 @@ public <return> someMethod(..., DewContext context) {
 }
 ----
 
+=== 单元测试
+
+良好的单元测试可以保证代码的高质量，单测的重要原则是内聚、无依赖，好的单测应该是"函数化"的——结果的变化只与传入参数有关。
+但实际上我们会的代码往往会与数据库、缓存、MQ等外部工具交互，这会使单测的结果不可控，通常的解决方案是使用Mock，但这无行中引入了单测撰写的成本，
+所以这里推荐使用"内嵌式"工具解决，数据库使用 `H2` ，Redis使用 `embedded redis` ，由于 `Dew` 集群的 `Cache` `Map` `Lock` `MQ` 都支持 `Redis` 实现，所以可以做到对主流操作的全覆盖。
+
+[source,xml]
+.配置示例
+----
+# maven
+<dependency>
+    <groupId>com.h2database</groupId>
+    <artifactId>h2</artifactId>
+    <scope>test</scope>
+</dependency>
+<dependency>
+    <groupId>com.github.kstyrc</groupId>
+    <artifactId>embedded-redis</artifactId>
+    <scope>test</scope>
+</dependency>
+
+# config
+spring:
+  redis:
+    host: localhost
+    port: 6379
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:test
+
+----
+
+[source,java]
+.使用示例
+----
+// embedded redis 需要初始化
+private RedisServer redisServer;
+
+@Before
+public void init() throws IOException {
+    redisServer = new RedisServer();
+    if (!redisServer.isActive()) {
+        redisServer.start();
+    }
+}
+
+@After
+public void destroy() {
+    if (redisServer.isActive()) {
+        redisServer.stop();
+    }
+}
+----
+
 
     
 
